--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -10,7 +10,7 @@ COPY manage.py /data/web
 # Setup
 RUN apk update
 RUN apk upgrade
-RUN apk add --update python3 python3-dev postgresql-client postgresql-dev build-base gettext zlib-dev jpeg-dev libffi-dev git
+RUN apk add --update python3 python3-dev postgresql-client postgresql-dev build-base gettext zlib-dev jpeg-dev libffi-dev git mercurial
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
 RUN pip3 install -r requirements_custom.txt
@@ -19,7 +19,7 @@ RUN pip3 install -r requirements_custom.txt
 ENV PYTHONPATH "$PYTHONPATH:/data/web/custom"
 
 # Clean
-RUN apk del -r python3-dev postgresql git
+RUN apk del -r python3-dev postgresql git mercurial
 
 # Prepare
 COPY ./school/ /data/web/school/
