--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ django-ckeditor>=5.0.0
 django-cms>=3.5.2
 django-colorful>=1.2
 django-crispy-forms>=1.6.0
-django-danceschool>=0.8.1
+# django-danceschool>=0.8.1
+-e hg+https://novokhatko.pp.ua/scm/hg/django-danceschool#egg=django_danceschool
 django-daterange-filter>=1.2.0
 django-dynamic-preferences>=1.3
 django-easy-pdf>=0.1.1
