--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -4,7 +4,7 @@ FROM alpine
 RUN mkdir -p /data/web
 WORKDIR /data/web
 COPY ./requirements.txt /data/web/
-COPY ./custom/requirements.txt /data/web/requirements_custom.txt
+#COPY ./custom/requirements.txt /data/web/requirements_custom.txt
 COPY manage.py /data/web
 
 # Setup
@@ -13,7 +13,7 @@ RUN apk upgrade
 RUN apk add --update python3 python3-dev postgresql-client postgresql-dev build-base gettext zlib-dev jpeg-dev libffi-dev git mercurial
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
-RUN pip3 install -r requirements_custom.txt
+#RUN pip3 install -r requirements_custom.txt
 
 # Add custom apps to PYTHONPATH
 ENV PYTHONPATH "$PYTHONPATH:/data/web/custom"
