--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Django>=1.11.15,<2.0
 gunicorn>=19.6.0
 paypalrestsdk>=1.12.0
 peewee>=2.10.1
-psycopg2>=2.7
+psycopg2>=2.7,<2.8
 redis>=2.10.6
 squareconnect>=2.20180712.3
 stripe>=1.62.0
