freeze python dependencies for a while

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,111 @@
-boto3>=1.4.7
-dj-database-url>=0.4.2
-dj-email-url>=0.0.10
+asn1crypto==0.24.0
+backports.csv==1.0.7
+beautifulsoup4==4.8.0
+boto3==1.9.228
+botocore==1.12.228
+cachetools==3.1.1
+certifi==2019.9.11
+cffi==1.12.3
+chardet==3.0.4
+cryptography==2.7
+defusedxml==0.6.0
+dj-database-url==0.5.0
+dj-email-url==0.2.0
+Django==1.11.24
+django-admin-sortable2==0.7.3
+django-allauth==0.40.0
+django-appconf==1.0.3
+django-autocomplete-light==3.2.10
+django-braces==1.13.0
+django-choices==1.7.0
+django-ckeditor==5.7.1
+django-ckeditor-filebrowser-filer==0.3.0
+django-classy-tags==0.9.0
+django-cms==3.6.0
+django-colorful==1.3
+django-crispy-forms==1.7.2
 # django-danceschool>=0.8.5
 -e hg+https://danceschoolrouser:Q3$)cYG=W=FXwV.B@novokhatko.pp.ua/scm/hg/django-danceschool#egg=django_danceschool
-django-redis>=4.10.0
-django-storages>=1.6.5
-Django>=1.11.15,<2.0
-gunicorn>=19.6.0
-paypalrestsdk>=1.12.0
-peewee>=2.10.1
-psycopg2>=2.7,<2.8
-redis>=2.10.6
-squareconnect>=2.20180712.3
-stripe>=1.62.0
-whitenoise>=3.2
+django-daterange-filter==1.3.0
+django-dynamic-preferences==1.7.1
+django-easy-pdf==0.1.1
+django-filer==1.5.0
+django-formtools==2.1
+django-ical==1.6.2
+django-imagekit==4.0.2
+django-ipware==2.1.0
+django-js-asset==1.2.2
+django-mptt==0.10.0
+django-multiselectfield==0.1.8
+django-parler==2.0
+django-polymorphic==2.0.3
+django-recurrence==1.10.1
+django-redis==4.10.0
+django-sekizai==1.0.0
+django-storages==1.7.2
+django-treebeard==4.3
+djangocms-admin-style==1.4.0
+djangocms-attributes-field==1.1.0
+djangocms-bootstrap4==1.5.0
+djangocms-forms==0.2.5
+djangocms-icon==1.4.1
+djangocms-link==2.5.0
+djangocms-picture==2.3.0
+djangocms-text-ckeditor==3.8.0
+docutils==0.15.2
+easy-thumbnails==2.6
+et-xmlfile==1.0.1
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
+gunicorn==19.9.0
+hashids==1.2.0
+html5lib==1.0.1
+httplib2==0.13.1
+huey==1.11.0
+icalendar==4.0.3
+idna==2.8
+intervaltree==3.0.2
+jdcal==1.4.1
+jmespath==0.9.4
+jsonfield==2.0.2
+oauthlib==3.1.0
+odfpy==1.4.0
+openpyxl==2.6.3
+paypalrestsdk==1.13.1
+peewee==3.10.0
+persisting-theory==0.2.1
+pilkit==2.0
+Pillow==6.1.0
+psycopg2==2.7.7
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+pycparser==2.19
+pyOpenSSL==19.0.0
+PyPDF2==1.26.0
+python-dateutil==2.8.0
+python3-openid==3.1.0
+pytz==2019.2
+PyYAML==5.1.2
+redis==3.3.8
+reportlab==3.5.23
+requests==2.22.0
+requests-oauthlib==1.2.0
+rsa==4.0
+s3transfer==0.2.1
+six==1.12.0
+sortedcontainers==2.1.0
+soupsieve==1.9.3
+squareconnect==2.20190724.1
+stripe==2.36.2
+tablib==0.13.0
+unicodecsv==0.14.1
+Unidecode==1.0.23
+uritemplate==3.0.0
+urllib3==1.25.3
+webencodings==0.5.1
+whitenoise==4.1.3
+xhtml2pdf==0.2.3
+xlrd==1.2.0
+xlwt==1.3.0
