--- a/docker/docker-compose-shellonly.yml
+++ b/docker/docker-compose-shellonly.yml
@@ -10,6 +10,7 @@ services:
       - media:/data/web/school/media
       - private_media:/data/web/school/smedia
       - ../custom:/data/web/custom
+      - ../../django-danceschool:/data/web/src/django-danceschool
     secrets:
       - postgres_url
       - django_secret_key
